<resources>
    <string name="app_name">TextChip Sample</string>

    <string name="text_hint">Text Chip</string>

    <string name="background_color">Background Color</string>
    <string name="text">Text</string>
    <string name="text_color">Text Color</string>
    <string name="text_size">Text Size</string>
    <string name="text_caps">Capitalize</string>

    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
</resources>
