<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.divshark.textchipsample.MainActivity">

    <com.divshark.text_chip.TextChip
        android:id="@+id/text_chip"
        android:layout_centerHorizontal="true"
        android:foreground="?selectableItemBackground"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <RelativeLayout
        android:background="@color/secondary_white"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_text"
            android:layout_width="match_parent"
            android:layout_height="?listPreferredItemHeight">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_text"
                android:text="@string/text"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_text"
                android:hint="@string/text_hint"
                android:singleLine="true"
                android:layout_toEndOf="@+id/tv_text"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@+id/rl_text"
            android:id="@+id/rl_text_color"
            android:layout_width="match_parent"
            android:layout_height="?listPreferredItemHeight">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_text_color"
                android:text="@string/text_color"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sp_text_color"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/tv_text_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_text_size"
            android:layout_below="@+id/rl_text_color"
            android:layout_width="match_parent"
            android:layout_height="?listPreferredItemHeight">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_text_size"
                android:text="@string/text_size"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sp_text_size"
                android:layout_toEndOf="@+id/tv_text_size"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@+id/rl_text_size"
            android:id="@+id/rl_background"
            android:layout_width="match_parent"
            android:layout_height="?listPreferredItemHeight">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_bg_color"
                android:text="@string/background_color"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <FrameLayout
                android:id="@+id/fl_bg_color"
                android:background="@color/colorAccent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="48dp"
                android:layout_height="48dp"/>

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
